WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55586
Fix build-breakage when GEOLOCATION not enabled.
https://bugs.webkit.org/show_bug.cgi?id=55586
Summary
Fix build-breakage when GEOLOCATION not enabled.
John Knottenbelt
Reported
2011-03-02 09:43:13 PST
Fix build-breakage when GEOLOCATION not enabled.
Attachments
Patch
(1.17 KB, patch)
2011-03-02 09:47 PST
,
John Knottenbelt
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Knottenbelt
Comment 1
2011-03-02 09:47:16 PST
Created
attachment 84429
[details]
Patch
John Knottenbelt
Comment 2
2011-03-02 09:51:10 PST
Committed
r80142
: <
http://trac.webkit.org/changeset/80142
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug