2011-03-02  John Knottenbelt  <jknotten@chromium.org>

Reviewed by jknotten@chromium.org.

        Fix build-breakage when GEOLOCATION not enabled.
        https://bugs.webkit.org/show_bug.cgi?id=55586

        Geolocation::reset needs to be defined if ENABLE(GEOLOCATION)
        is not true.

        * page/Geolocation.cpp:
        (WebCore::Geolocation::reset):

git-svn-id: svn://svn.chromium.org/blink/trunk@80142 bbb929c8-8fbe-4397-9dbb-9b2b20218538